<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gestione_notifiche">

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:theme="@style/SCBSwitch"
        android:fontFamily="@font/bahiama"
        android:minHeight="48dp"
        android:switchPadding="15dp"
        android:text="@string/disattivanotifiche"
        android:textSize="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/bahiama"
        android:theme="@style/SCBSwitch"

        android:minHeight="48dp"
        android:switchPadding="15dp"
        android:text="@string/silenzianotifiche"
        android:textSize="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch2" />

    <Switch
        android:id="@+id/switch4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/bahiama"
        android:minHeight="48dp"
        android:switchPadding="15dp"
        android:text="@string/notifichenuovofollower"
        android:textSize="28dp"
        android:theme="@style/SCBSwitch"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch3" />

    <Switch
        android:id="@+id/switch5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/bahiama"
        android:minHeight="48dp"
        android:theme="@style/SCBSwitch"

        android:switchPadding="15dp"
        android:text="@string/notifichenuovocou"
        android:textSize="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch4" />

    <Switch
        android:id="@+id/switch7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/bahiama"
        android:minHeight="48dp"

        android:switchPadding="15dp"
        android:text="@string/notifichenuovarecensuiine"
        android:textSize="28dp"
        android:theme="@style/SCBSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch5" />

</androidx.constraintlayout.widget.ConstraintLayout>