<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".privacy">

    <ImageView
        android:id="@+id/imageView62"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_impo" />

    <Switch
        android:id="@+id/switch6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/bahiama"
        android:minHeight="48dp"
        android:switchPadding="15dp"
        android:text="@string/profilopubblico"
        android:textSize="28dp"
        android:theme="@style/SCBSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/bahiama"

        android:minHeight="48dp"
        android:switchPadding="15dp"
        android:text="@string/tuttipossonovedereletuefoto"
        android:textSize="28dp"
        android:theme="@style/SCBSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch6" />

    <Switch
        android:id="@+id/switch9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/bahiama"
        android:minHeight="48dp"
        android:switchPadding="15dp"
        android:text="@string/tuttipossonovedereituoicoupon"
        android:textSize="28dp"

        android:theme="@style/SCBSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch8" />

    <Switch
        android:id="@+id/switch10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/bahiama"
        android:minHeight="48dp"

        android:switchPadding="15dp"
        android:text="@string/tuttipossonovedereifolorwer"
        android:textSize="28dp"
        android:theme="@style/SCBSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch9" />
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="bottom"
            android:backgroundTint="@color/giallochiaro"

            >

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"

                android:background="@drawable/trans_drawable"
                app:itemIconTint="@drawable/bottom_1"
                app:itemTextColor="@drawable/bottom_1"
                app:menu="@menu/menu_home" />


        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatBotton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:backgroundTint="@color/giallochiaro"
            android:src="@drawable/qr_icon"
            app:borderWidth="0dp"
            app:layout_anchor="@id/bottomAppBar" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>