<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckPartitaIva">

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="#FF0000"
        app:boxBackgroundColor="@color/gialloScuro"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeColor="@color/gialloScuro"
        app:hintTextColor="@color/gialloScuro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textEmail"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#66D9D9D9"
            android:hint="@string/partitaIva"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinner"
        style="@style/spinnerPaese"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/spinner"
        android:entries="@array/arrayLocationPartitaIva"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/bahiama"
        android:text="@string/inseriscilatuapartitaiva"
        android:textSize="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView12" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutPass"
        app:srcCompat="@drawable/botton_login" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bahiama"
        android:text="@string/completaregistrazione"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton5"
        app:layout_constraintEnd_toEndOf="@+id/imageButton5"
        app:layout_constraintStart_toStartOf="@+id/imageButton5"
        app:layout_constraintTop_toTopOf="@+id/imageButton5" />

</androidx.constraintlayout.widget.ConstraintLayout>